--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "compile": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
     "ts": "tsc --noEmit && node --no-warnings=--no-warnings=ExperimentalWarning --loader ts-node/esm",
-    "mock:server": "json-server ./mocks/mock-server-data.json --port 3123 --host localhost"
+    "mock:server": "json-server ./mocks/mock-server-data.json --port 3123 --host localhost",
+    "ts:import": "npm run ts ./src/main.cli.ts -- --import ./mocks/mock-data.tsv Roman 123qwe localhost sex-cities salt"
   },
   "devDependencies": {
     "@types/convict": "6.1.6",
