--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@types/convict": "6.1.6",
     "@types/convict-format-with-validator": "6.0.5",
+    "@types/express": "5.0.0",
     "@types/node": "20.12.7",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
@@ -45,6 +46,7 @@
     "convict-format-with-validator": "6.2.0",
     "dayjs": "1.11.13",
     "dotenv": "16.4.5",
+    "express": "4.21.1",
     "got": "14.4.2",
     "inversify": "6.0.2",
     "mongoose": "8.7.2",
