--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dotenv": "16.4.5",
     "express": "4.21.1",
     "got": "14.4.2",
+    "http-status-codes": "2.3.0",
     "inversify": "6.0.2",
     "mongoose": "8.7.2",
     "pino": "9.5.0",
