--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@types/convict": "6.1.6",
     "@types/convict-format-with-validator": "6.0.5",
     "@types/express": "5.0.0",
+    "@types/mime-types": "2.1.4",
+    "@types/multer": "1.4.12",
     "@types/node": "20.12.7",
     "@typescript-eslint/eslint-plugin": "6.7.0",
     "@typescript-eslint/parser": "6.7.0",
@@ -43,6 +45,7 @@
     "@typegoose/typegoose": "12.8.0",
     "chalk": "5.3.0",
     "class-transformer": "0.5.1",
+    "class-validator": "0.14.1",
     "convict": "6.2.4",
     "convict-format-with-validator": "6.2.0",
     "dayjs": "1.11.13",
@@ -52,7 +55,10 @@
     "got": "14.4.2",
     "http-status-codes": "2.3.0",
     "inversify": "6.0.2",
+    "jose": "5.9.6",
+    "mime-types": "2.1.35",
     "mongoose": "8.7.2",
+    "multer": "1.4.5-lts.1",
     "pino": "9.5.0",
     "reflect-metadata": "0.2.2"
   }
