--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "compile": "tsc -p tsconfig.json",
     "clean": "rimraf dist",
     "ts": "tsc --noEmit && node --no-warnings=--no-warnings=ExperimentalWarning --loader ts-node/esm",
-    "mock:server": "json-server ./mocks/mock-server-data.json --port 3123 --host localhost"
+    "mock:server": "json-server ./mocks/mock-server-data.json --port 3123 --host localhost",
+    "generate:dev": "npm run ts ./src/main.cli.ts -- --generate 15 ./mocks/new-data.tsv http://localhost:3123/api",
+    "import:dev": "npm run ts ./src/main.cli.ts -- --import ./mocks/new-data.tsv Admin admin localhost six-cities salt"
   },
   "devDependencies": {
     "@types/convict": "6.1.6",
@@ -43,11 +45,13 @@
   },
   "dependencies": {
     "@typegoose/typegoose": "12.8.0",
+    "@types/cors": "2.8.17",
     "chalk": "5.3.0",
     "class-transformer": "0.5.1",
     "class-validator": "0.14.1",
     "convict": "6.2.4",
     "convict-format-with-validator": "6.2.0",
+    "cors": "2.8.5",
     "dayjs": "1.11.13",
     "dotenv": "16.4.5",
     "express": "4.21.1",
