--- a/.env-example
+++ b/.env-example
@@ -5,7 +5,7 @@ DB_NAME=six-cities
 DB_USERNAME=Admin
 DB_PASSWORD=admin
 DB_PORT=27017
-UPLOAD_DIRECTIRY=\upload
+UPLOAD_DIRECTORY=\upload
 JWT_SECRET=secret
 HOST=localhost
 STATIC_DIRECTORY_PATH=static\
